# grok-build-desktop

./: .gitignore  CHANGELOG.md  HANDOFF.md  NOTICE  README.md  SIGNING.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  track-upstream.yml
compat/: README.md  acp-schema-version.txt  npm-latest.json  upstream.lock.json
compat/reports/: latest.md
docs/: CNAME  index.html  robots.txt  site.webmanifest  sitemap.xml
scripts/: sign-macos.sh  track-upstream.sh
src/: App.css  App.test.ts  App.tsx  Autocomplete.tsx  CatPet.tsx  CodeBlock.tsx  CommandPalette.tsx  ConfigPanel.tsx  DocViewerPanel.tsx  DocxRenderer.tsx  EffortPicker.tsx  FirstRunStepper.tsx  ImageRenderer.tsx  MessageActions.tsx  PdfRenderer.tsx  PluginsPanel.tsx  Preferences.tsx  ReceiptPanel.tsx  RewindPanel.tsx  SessionsPanel.tsx  SplitDiff.tsx  TasksPanel.tsx  ToolCard.tsx  VideoRenderer.tsx  WorktreesPanel.tsx  appPure.test.ts  markdownSafety.test.ts  reduceUpdates.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  panel_config.rs  panel_plugins.rs  panel_sessions.rs  panel_worktrees.rs
src/lib/: asset.ts  bridge.test.ts  bridge.ts  commands.test.ts  commands.ts  diff.d.ts  effort.test.ts  effort.ts  firstRun.test.ts  firstRun.ts  highlight.test.ts  highlight.ts  notify.test.ts  notify.ts  receipt.test.ts  receipt.ts  rewind.test.ts  rewind.ts  splitDiff.test.ts  splitDiff.ts  theme.test.ts  theme.ts  toolMeta.test.ts  toolMeta.ts
src/lib/docViewer/: formatDetect.test.ts  formatDetect.ts  htmlAllowlist.test.ts  htmlAllowlist.ts  pageState.test.ts  pageState.ts  sizeGuard.test.ts  sizeGuard.ts
