[package]
name = "grok-build-desktop"
version = "0.9.2"
description = "A clean desktop GUI for Grok Build — no terminal required."
authors = ["Grok Build Desktop contributors"]
license = "Apache-2.0"
repository = "https://github.com/Rushour0/grok-build-desktop"
edition = "2021"
# `HashMap::extract_if` (see `take_window` in src/lib.rs) stabilized in 1.88. It is the
# only way to move owned Sessions out of the state map — `retain` can't — and killing a
# Session must happen with the state lock released.
rust-version = "1.88"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grok_build_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Reads grok's OWN FTS5 index (`~/.grok/sessions/session_search.sqlite`) for content
# search. `bundled` compiles SQLite from source rather than linking the system one:
# macOS ships FTS5, Windows has no system SQLite at all, and `targets: "all"` means we
# build for both. No extra feature is needed for FTS5 — libsqlite3-sys's bundled build
# defines SQLITE_ENABLE_FTS5 itself (verified: bare `bundled` answers
# `CREATE VIRTUAL TABLE ... USING fts5` and serves bm25()/snippet()).
rusqlite = { version = "0.32", features = ["bundled"] }

# The updater is desktop-only; mobile targets don't build it.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
